RESOLVED FIXED 32575
sourceGraphic wrong if positive x,y is >0 and objectBB is selected on Filter
https://bugs.webkit.org/show_bug.cgi?id=32575
Summary sourceGraphic wrong if positive x,y is >0 and objectBB is selected on Filter
Dirk Schulze
Reported 2009-12-15 13:15:51 PST
sourceGraphic is on the wrong position if values of filter: x,y are positive and filterUnits=objectBB. This is caused by the clipping of the sourceImage rect to the filter rect. I have already a patch for it, but need to run LayoutTests first.
Attachments
Fix of Filter source position (22.36 KB, patch)
2009-12-16 00:06 PST, Dirk Schulze
no flags
Dirk Schulze
Comment 1 2009-12-16 00:06:36 PST
Created attachment 44951 [details] Fix of Filter source position On SVG Filters, the rest of the source graphic gets clipped to the filter rest. This helps us to minimize the size of intermediate ImageBuffers. If the position moves to the right or to the bottom, we have to adjust the GraphicContext of this intermediate ImageBuffer. This patch fixes the adjustment of the context, according to the clipping.
WebKit Review Bot
Comment 2 2009-12-16 00:09:44 PST
style-queue ran check-webkit-style on attachment 44951 [details] without any errors.
WebKit Commit Bot
Comment 3 2009-12-16 10:13:03 PST
Comment on attachment 44951 [details] Fix of Filter source position Clearing flags on attachment: 44951 Committed r52202: <http://trac.webkit.org/changeset/52202>
WebKit Commit Bot
Comment 4 2009-12-16 10:13:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.