2009-12-16  Dirk Schulze  <krit@webkit.org>

Reviewed by Darin Adler.

        sourceGraphic wrong if positive x,y is >0 and objectBB is selected on Filter
        https://bugs.webkit.org/show_bug.cgi?id=32575

        Check if the GraphicsContex get adjusted, if the source rect is clipped
        to the filter rect.

        * platform/mac/svg/filters/filter-source-position-expected.checksum: Added.
        * platform/mac/svg/filters/filter-source-position-expected.png: Added.
        * platform/mac/svg/filters/filter-source-position-expected.txt: Added.
        * svg/filters/filter-source-position.svg: Added.
2009-12-16  Dirk Schulze  <krit@webkit.org>

        Reviewed by Darin Adler.

        sourceGraphic wrong if positive x,y is >0 and objectBB is selected on Filter
        https://bugs.webkit.org/show_bug.cgi?id=32575

        On SVG Filters, the rest of the source graphic gets clipped to the filter
        rest. This helps us to minimize the size of intermediate ImageBuffers. If
        the position moves to the right or to the bottom, we have to adjust the
        GraphicContext of this intermediate ImageBuffer.
        This patch fixes the adjustment of the context, according to the clipping.

        Test: svg/filters/filter-source-position.svg

        * svg/graphics/SVGResourceFilter.cpp:
        (WebCore::SVGResourceFilter::prepareFilter):

Canonical link: https://commits.webkit.org/43626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52202 268f45cc-cd09-0410-ab3c-d52691b4dbfc